--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Έκδοση Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Χρήση</string>
     <string name="menu_refresh">Ανανέωση</string>
     <string name="menu_settings">Ρυθμίσεις</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
-    <string name="msg_licensed" formatted="false">Άδεια για: %s</string>
     <string name="msg_loading">Φόρτωση</string>
     <string name="msg_applying">Applying</string>
     <string name="msg_applied">Template applied</string>
