--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Versió d\'Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 per M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Usos</string>
     <string name="menu_refresh">Refresca</string>
     <string name="menu_settings">Configuració</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Nou</string>
     <string name="msg_update">Actualitza</string>
-    <string name="msg_licensed" formatted="false">Llicenciat a: %s</string>
     <string name="msg_loading">Carregant</string>
     <string name="msg_applying">Applying</string>
     <string name="msg_applied">Template applied</string>
