--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">Ultimátní správce soukromí</string>
     <string name="app_xversion" formatted="false">Verze Xposed frameworku: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014: M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Využití</string>
     <string name="menu_refresh">Obnovit</string>
     <string name="menu_settings">Nastavení</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Přerušeno</string>
     <string name="msg_new">Nové</string>
     <string name="msg_update">Aktualizované</string>
-    <string name="msg_licensed" formatted="false">Licencováno na: %s</string>
     <string name="msg_loading">Probíhá načítání</string>
     <string name="msg_applying">Probíhá aplikování</string>
     <string name="msg_applied">Šablona aplikována</string>
