--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">Der ultimative Privacy Manager</string>
     <string name="app_xversion" formatted="false">Xposed Framework Version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Aktivitätslog</string>
     <string name="menu_refresh">Aktualisieren</string>
     <string name="menu_settings">Einstellungen</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Abgebrochen</string>
     <string name="msg_new">Neu</string>
     <string name="msg_update">Update</string>
-    <string name="msg_licensed" formatted="false">Lizensiert für: %s</string>
     <string name="msg_loading">Lade...</string>
     <string name="msg_applying">Übernehme...</string>
     <string name="msg_applied">Template übernommen</string>
