--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed raamistiku versioon: %d</string>
     <string name="app_copyright">Autoriõigus \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Kasutus</string>
     <string name="menu_refresh">Värskenda</string>
     <string name="menu_settings">Seaded</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
-    <string name="msg_licensed" formatted="false">Litsentseeritud: %s</string>
     <string name="msg_loading">Laeb</string>
     <string name="msg_applying">Applying</string>
     <string name="msg_applied">Template applied</string>
