--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -10,6 +10,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">%d :فریم ورک ایکس پرایویسی ورژن </string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">کاربرد</string>
     <string name="menu_refresh">تازه سازی</string>
     <string name="menu_settings">تنظیمات</string>
@@ -49,7 +50,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
-    <string name="msg_licensed" formatted="false">%s مجوز به: </string>
     <string name="msg_loading">در حال بارگذاری</string>
     <string name="msg_applying">Applying</string>
     <string name="msg_applied">Template applied</string>
