--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework versio: %d</string>
     <string name="app_copyright">Tekijänoikeus \u00A9 2013–2014 M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Käyttötiedot</string>
     <string name="menu_refresh">Päivitä</string>
     <string name="menu_settings">Asetukset</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Uusi</string>
     <string name="msg_update">Päivitä</string>
-    <string name="msg_licensed" formatted="false">Lisensoitu: %s</string>
     <string name="msg_loading">Lataa</string>
     <string name="msg_applying">Applying</string>
     <string name="msg_applied">Template applied</string>
