--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">Le gestionnaire de vie privée ultime</string>
     <string name="app_xversion" formatted="false">Version de l\'environnement Xposed : %d</string>
     <string name="app_copyright">Droits d\'auteur : M. Bokhorst (M66B) \u00A9 2013–2014 </string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Usage</string>
     <string name="menu_refresh">Rafraîchir</string>
     <string name="menu_settings">Paramètres</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Arrêté</string>
     <string name="msg_new">Nouv. :</string>
     <string name="msg_update">MàJ :</string>
-    <string name="msg_licensed" formatted="false">Autorisé à : %s</string>
     <string name="msg_loading">Chargement...</string>
     <string name="msg_applying">Application en cours...</string>
     <string name="msg_applied">Modèle appliqué</string>
