--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework leagan: %d</string>
     <string name="app_copyright">Cóipcheart \ u00A9 2013–2014 le M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Úsáid</string>
     <string name="menu_refresh">Athnuaigh</string>
     <string name="menu_settings">Socruithe</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Nua</string>
     <string name="msg_update">Nuashonrú</string>
-    <string name="msg_licensed" formatted="false">Ceadúnaithe do: %s</string>
     <string name="msg_loading">Loading</string>
     <string name="msg_applying">Applying</string>
     <string name="msg_applied">Template applied</string>
