--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed keretrendszer verzió: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Használat</string>
     <string name="menu_refresh">Frissítés</string>
     <string name="menu_settings">Beállítások</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Új</string>
     <string name="msg_update">Frissítés</string>
-    <string name="msg_licensed" formatted="false">Licensz tulajdonos: %s</string>
     <string name="msg_loading">Töltés</string>
     <string name="msg_applying">Alkalmazás</string>
     <string name="msg_applied">Útmutató alkalmazva</string>
