--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed programos versija: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Duomenų naudojimas</string>
     <string name="menu_refresh">Atnaujinti</string>
     <string name="menu_settings">Parametrai</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Atmesti</string>
     <string name="msg_new">Naujas</string>
     <string name="msg_update">Atnaujinta</string>
-    <string name="msg_licensed" formatted="false">licencija: %s</string>
     <string name="msg_loading">Palaukite...</string>
     <string name="msg_applying">Vykdoma</string>
     <string name="msg_applied">Šablonas pritaikytas</string>
