--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">De ultieme privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework versie: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Gebruik</string>
     <string name="menu_refresh">Ververs</string>
     <string name="menu_settings">Instellingen</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Afgebroken</string>
     <string name="msg_new">Nieuw</string>
     <string name="msg_update">Bijgewerkt</string>
-    <string name="msg_licensed" formatted="false">In licentie gegeven aan: %s</string>
     <string name="msg_loading">Laden &#8230;</string>
     <string name="msg_applying">Toepassen &#8230;</string>
     <string name="msg_applied">Sjabloon toegepast</string>
