--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Версия Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Использование</string>
     <string name="menu_refresh">Обновить</string>
     <string name="menu_settings">Параметры</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Новое</string>
     <string name="msg_update">Обновить</string>
-    <string name="msg_licensed" formatted="false">Владелец лицензии: %s</string>
     <string name="msg_loading">Загрузка</string>
     <string name="msg_applying">Применение</string>
     <string name="msg_applied">Шаблон применен</string>
