--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">Správca súkromia</string>
     <string name="app_xversion" formatted="false">Verzia Xposed frameworku: %d</string>
     <string name="app_copyright">Autorské práva \u00A9 2013–2014 od M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Využitie dát</string>
     <string name="menu_refresh">Obnoviť</string>
     <string name="menu_settings">Nastavenia</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Nové</string>
     <string name="msg_update">Aktualizácia</string>
-    <string name="msg_licensed" formatted="false">Licencované na: %s</string>
     <string name="msg_loading">Načítavanie &#8230;</string>
     <string name="msg_applying">Aplikovanie &#8230;</string>
     <string name="msg_applied">Šablóny bola aplikovaná</string>
