--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework različica: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Uporaba</string>
     <string name="menu_refresh">Osveži</string>
     <string name="menu_settings">Nastavitve</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Novo</string>
     <string name="msg_update">Posodobitev</string>
-    <string name="msg_licensed" formatted="false">Licencirano na: %s</string>
     <string name="msg_loading">Nalagam</string>
     <string name="msg_applying">Uveljavljam</string>
     <string name="msg_applied">Predloga uveljavljena</string>
