--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Användning</string>
     <string name="menu_refresh">Uppdatera</string>
     <string name="menu_settings">Inställningar</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Ny</string>
     <string name="msg_update">Uppdatera</string>
-    <string name="msg_licensed" formatted="false">Licensierat till: %s</string>
     <string name="msg_loading">Laddar</string>
     <string name="msg_applying">Applying</string>
     <string name="msg_applied">Template applied</string>
