--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework versiyon: %d</string>
     <string name="app_copyright">Telif hakkı \u00A9 2013–2014, M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Kullanım</string>
     <string name="menu_refresh">Yenile</string>
     <string name="menu_settings">Ayarlar</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">New</string>
     <string name="msg_update">Update</string>
-    <string name="msg_licensed" formatted="false">%s adına lisanslıdır.</string>
     <string name="msg_loading">Yükleniyor</string>
     <string name="msg_applying">Applying</string>
     <string name="msg_applied">Template applied</string>
