--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Версія Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Використання</string>
     <string name="menu_refresh">Оновити</string>
     <string name="menu_settings">Параметри</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Нове</string>
     <string name="msg_update">Оновити</string>
-    <string name="msg_licensed" formatted="false">Власник ліцензіі: %s</string>
     <string name="msg_loading">Завантаження</string>
     <string name="msg_applying">Застосовується</string>
     <string name="msg_applied">Шаблон застосовано</string>
