--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">Ứng dụng quản lý thông tin riêng tư tối đa</string>
     <string name="app_xversion" formatted="false">Xposed framework phiên bản: %d</string>
     <string name="app_copyright">Bản quyền \u00A9 2013–2014 thuộc về M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">Sử dụng</string>
     <string name="menu_refresh">Làm mới</string>
     <string name="menu_settings">Thiết lập</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">Aborted</string>
     <string name="msg_new">Mới</string>
     <string name="msg_update">Cập nhật</string>
-    <string name="msg_licensed" formatted="false">Bản quyền: %s</string>
     <string name="msg_loading">Đang tải</string>
     <string name="msg_applying">Đang áp dụng</string>
     <string name="msg_applied">Thiết lập mẫu đã được áp dụng</string>
