--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_description">超強隱私管理工具，絕讚好評發售中!!</string>
     <string name="app_xversion" formatted="false">Xposed framework 版本: %d</string>
     <string name="app_copyright">版權所有 \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
+    <string name="app_licensed">Licensed, thanks for your support!</string>
     <string name="menu_usage">操作記錄</string>
     <string name="menu_refresh">重新整理</string>
     <string name="menu_settings">設定</string>
@@ -47,7 +48,6 @@
     <string name="msg_aborted">已取消</string>
     <string name="msg_new">已安裝</string>
     <string name="msg_update">已更新</string>
-    <string name="msg_licensed" formatted="false">授權給: %s</string>
     <string name="msg_loading">載入中...</string>
     <string name="msg_applying">正在套用設定...</string>
     <string name="msg_applied">已套用預設規則</string>
