Revert "Remove fingerprint checking"
This reverts commit f7b08d3904ff8e326fdb0d2dc0b4214cd6d9dcc1.

Conflicts:
	res/values/strings.xml
	src/biz/bokhorst/xprivacy/Util.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -181,5 +181,6 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
     <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
     <string name="permission_manage">Manage applications, including killing</string>
+    <string name="fingerprint" translatable="false">10620ae961d78854f6c9cd872c4388232849c799</string>
 
 </resources>
