--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -8,7 +8,7 @@
     <string name="app_description">De ultieme privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework versie: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
-    <string name="app_licensed">Licensed, thanks for your support!</string>
+    <string name="app_licensed">Gelicenseerd, bedankt voor uw ondersteuning!</string>
     <string name="menu_usage">Gebruik</string>
     <string name="menu_refresh">Ververs</string>
     <string name="menu_settings">Instellingen</string>
