--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -8,7 +8,7 @@
     <string name="app_description">Kompleksowy menadżer prywatności</string>
     <string name="app_xversion" formatted="false">Wersja frameworka Xposed: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
-    <string name="app_licensed">Licensed, thanks for your support!</string>
+    <string name="app_licensed">Zarejestrowana, dziekuję za wsparcie!</string>
     <string name="menu_usage">Dostęp do danych</string>
     <string name="menu_refresh">Odśwież</string>
     <string name="menu_settings">Ustawienia</string>
@@ -103,7 +103,7 @@
     <string name="title_fpermission">Filtruj wg uprawnień</string>
     <string name="title_frestricted">Filtruj wg ograniczeń</string>
     <string name="title_fuser">Filtruj wg aplikacji użytkownika</string>
-    <string name="title_fondemand">Filter by on-demand</string>
+    <string name="title_fondemand">Filtruj wg dostępu na żądanie</string>
     <string name="title_fsystem">Filtruj wg aplikacji systemowych</string>
     <string name="title_fnot">Odwróć</string>
     <string name="title_sname">Po nazwie</string>
@@ -121,7 +121,7 @@
     <string name="title_allow">Pozwól</string>
     <string name="title_deny">Zabroń</string>
     <string name="title_pleasesubmit">Proszę wyślij twoje ograniczenia aby pomóc innym</string>
-    <string name="title_permissions">Permissions</string>
+    <string name="title_permissions">Uprawnienia</string>
     <string name="settings_serial">Numer seryjny</string>
     <string name="settings_lat">Szerokość geograficzna</string>
     <string name="settings_lon">Długość geograficzna</string>
