Added option to fake GSM CID/LAC
Closes #1289

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -147,6 +147,8 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="settings_https">Použít zabezpečené připojení</string>
     <string name="settings_syscomponents">Omezit systémové komponenty (Android) (vyžaduje restart)</string>
     <string name="settings_usagedata">Zobrazit využítí dat aplikace (vyžaduje restart)</string>
+    <string name="settings_cid">GSM Cell ID</string>
+    <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Long press name to select</string>
     <string name="help_ondemand">restrictions will be asked</string>
     <string name="help_application">Aplikace</string>
