--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -147,6 +147,8 @@
     <string name="settings_https">Benutze sichere Verbindung</string>
     <string name="settings_syscomponents">Beschränke Systemkomponenten (Android) (erfordert Geräteneustart)</string>
     <string name="settings_usagedata">Zeige App Nutzungsdaten\n (erfordert Geräteneustart)</string>
+    <string name="settings_cid">GSM Cell ID</string>
+    <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Für Auswahl App-Name drücken und kurz halten</string>
     <string name="help_ondemand">Beschränkungen nach Aufforderung festlegen</string>
     <string name="help_application">App</string>
