--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -147,6 +147,8 @@ sin embargo no puedo garantizar que funcione sin ningún fallo para cada disposi
     <string name="settings_https">Usar conexiones seguras</string>
     <string name="settings_syscomponents">Restringir componentes del sistema (Android) (requiere reinicio)</string>
     <string name="settings_usagedata">Mostrar uso de datos de las aplicaciones (requires restart)</string>
+    <string name="settings_cid">GSM Cell ID</string>
+    <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Click largo sobre un nombre selecciona la aplicación</string>
     <string name="help_ondemand">Se le preguntará por las restricciones</string>
     <string name="help_application">Aplicación</string>
