--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -147,6 +147,8 @@
     <string name="settings_https">セキュリティーで保護された接続を使用する</string>
     <string name="settings_syscomponents">システムのコンポーネントにアクセスを制限する （アンドロイド）（再起動が必要となります）</string>
     <string name="settings_usagedata">使用状況データを登録する（再起動が必要）</string>
+    <string name="settings_cid">GSM Cell ID</string>
+    <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">タイトルを押してれば、選択ができます</string>
     <string name="help_ondemand">restrictions will be asked</string>
     <string name="help_application">アプリ</string>
