--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -147,6 +147,8 @@ namun ia adalah mustahil untuk menjaminkan penggunaan sempurna untuk setiap pera
     <string name="settings_https">Guna sambungan terjamin</string>
     <string name="settings_syscomponents">Sekat komponen sistem (Android)</string>
     <string name="settings_usagedata">Tunjuk penggunaan data aplikasi</string>
+    <string name="settings_cid">GSM Cell ID</string>
+    <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Tekan lama pada nama untuk pilih</string>
     <string name="help_ondemand">sekatan akan diminta</string>
     <string name="help_application">Aplikasi</string>
