--- a/res/values-no-rNO/strings.xml
+++ b/res/values-no-rNO/strings.xml
@@ -145,6 +145,8 @@
     <string name="settings_https">Bruk trygg forbindelse</string>
     <string name="settings_syscomponents">Blokker systemkomponenter (Android) (omstart nødvendig)</string>
     <string name="settings_usagedata">Vis brukerdata til apper (omstart nødvendig)</string>
+    <string name="settings_cid">GSM Cell ID</string>
+    <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">>Trykk lenge på navnet som skal markeres</string>
     <string name="help_ondemand">apper spør om tillatelse</string>
     <string name="help_application">App</string>
