--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -146,6 +146,8 @@
     <string name="settings_https">Sử dụng các kết nối được bảo mật</string>
     <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
     <string name="settings_usagedata">Show application usage data (requires restart)</string>
+    <string name="settings_cid">GSM Cell ID</string>
+    <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Long press name to select</string>
     <string name="help_ondemand">restrictions will be asked</string>
     <string name="help_application">Ứng dụng</string>
