--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -147,6 +147,8 @@
     <string name="settings_https">使用安全连接(https)</string>
     <string name="settings_syscomponents">限制系统组件 (Android) (需要重启)</string>
     <string name="settings_usagedata">显示应用权限使用情况 (需要重启)</string>
+    <string name="settings_cid">GSM Cell ID</string>
+    <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">长按名称进行选择</string>
     <string name="help_ondemand">限制将被请求</string>
     <string name="help_application">请输入应用名称</string>
