--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -147,6 +147,8 @@
     <string name="settings_https">使用加密連線 (HTTPS)</string>
     <string name="settings_syscomponents">可限制安卓系統元件(需重新啟動)</string>
     <string name="settings_usagedata">開啟操作記錄(需重新啟動)</string>
+    <string name="settings_cid">GSM Cell ID</string>
+    <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">長按程式名稱可選取</string>
     <string name="help_ondemand">存取該權限時詢問</string>
     <string name="help_application">程式名稱</string>
