--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -161,6 +161,8 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="settings_https">Use secure connections</string>
     <string name="settings_syscomponents">Restrict system components (Android)</string>
     <string name="settings_usagedata">Show application usage data</string>
+    <string name="settings_cid">GSM Cell ID</string>
+    <string name="settings_lac">GSM LAC</string>
     <string name="help_longpress">Long press name to select</string>
     <string name="help_ondemand">restrictions will be asked</string>
     <string name="help_application">Application</string>
