--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -8,7 +8,7 @@
     <string name="app_description">Der ultimative Privacy Manager</string>
     <string name="app_xversion" formatted="false">Xposed Framework Version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
-    <string name="app_licensed">Licensed, thanks for your support!</string>
+    <string name="app_licensed">Lizensiert, vielen Dank für Ihre Unterstützung!</string>
     <string name="menu_usage">Aktivitätslog</string>
     <string name="menu_refresh">Aktualisieren</string>
     <string name="menu_settings">Einstellungen</string>
