--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -8,7 +8,7 @@
     <string name="app_description">Le gestionnaire de vie privée ultime</string>
     <string name="app_xversion" formatted="false">Version de l\'environnement Xposed : %d</string>
     <string name="app_copyright">Droits d\'auteur : M. Bokhorst (M66B) \u00A9 2013–2014 </string>
-    <string name="app_licensed">Licensed, thanks for your support!</string>
+    <string name="app_licensed">Autorisé, merci pour votre soutien!</string>
     <string name="menu_usage">Usage</string>
     <string name="menu_refresh">Rafraîchir</string>
     <string name="menu_settings">Paramètres</string>
